[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fourm"
version = "1.0.0"
description = "Massively Multimodal Masked Modeling"
requires-python = ">=3.8"
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "albumentations==1.4.0",
    "boto3>=1.26.16",
    "braceexpand>=0.1.7",
    "diffusers==0.20.0",
    "einops>=0.7.0",
    "ftfy==6.1.0",
    "huggingface_hub>=0.20.0,<=0.24.0",
    "matplotlib>=3.6.2",
    "numpy>=1.26.4,<2.0.0",
    "opencv_python>=4.9.0.80",
    "opencv_python_headless>=4.6.0.66",
    "pandas>=1.5.2",    
    "Pillow>=9.3.0",
    "PyYAML>=6.0",
    "regex>=2022.10.31",
    "Requests>=2.31.0",
    "scikit_learn>=1.1.3",
    "setuptools>=61.0",
    "tokenizers>=0.15.2",
    "datasets>=0.17",
    "torchmetrics[image,multimodal]>=1.3.1",
    "tqdm>=4.64.1",
    "wandb>=0.13.5",
    "webdataset>=0.2.86",
]

[project.optional-dependencies]
fast = [
    "xformers>=0.0.24",
]

[project.urls]
"Homepage" = "https://4m.epfl.ch"

[tool.setuptools.packages.find]
exclude = ["cfgs*", "assets*", "notebooks*"]

[tool.wheel]
exclude = ["cfgs*", "assets*", "notebooks*"]
